feat: removed useless dependencies and change the publish workflow to a better one. (#2)
* chore: removed unsused dependencies.

* chore: relocated to  io.github.trethore

* fix: update links to native artifacts in README files

* feat: enhance publish workflow to support dynamic target selection and update Maven upload URL format