@@ -58,10 +58,10 @@ implementation('io.github.trethore:jcefgithub:143.0.14.9:all-relocated') {
 
 ## How to use
 
-You can find the most recent versions of the artifacts on the [releases](../../releases) page of this repository. Alongside each release is also a table with platforms that have been tested. If you have tested a platform and build combination that has not been tested before (using the [sample app](https://github.com/jcefgithub/jcefsampleapp)), make sure to open a [new issue](../../issues/new?assignees=&labels=test+report&template=report_artifact_working.md&title=%5BTR%5D+Test+report) to share your findings!
+You can find the most recent versions of the artifacts on the [releases](../../releases) page of this repository. Alongside each release is also a table with platforms that have been tested. If you have tested a platform and build combination that has not been tested before, make sure to open a [new issue](../../issues/new?assignees=&labels=test+report&template=report_artifact_working.md&title=%5BTR%5D+Test+report) to share your findings!
 
 Once you found a version you want to use, include it as a dependency into your project. An example include for Maven and Gradle can be seen above.
-This will only include the base jcef library and jogl in your project. Natives will be downloaded and extracted on first run. If you want to skip downloading and instead bundle the natives, include the native artifacts in your project dependencies. You can see all of them [here](https://repo.maven.apache.org/maven2/io/github/trethore/). It is recommended to only include one bundle per build though, as each bundle is ~100MB. If you wish to include them, make sure you export one build per platform!
+This will only include the base jcef library in your project. Natives will be downloaded and extracted on first run. If you want to skip downloading and instead bundle the natives, include the native artifacts in your project dependencies. You can see all of them [here](https://github.com/trethore?tab=packages&repo_name=jcefgithub). It is recommended to only include one bundle per build though, as each bundle is ~100MB. If you wish to include them, make sure you export one build per platform!
 
 Once you added your dependencies, you need to fire up jcefgithub in your code. No worries, it's not complicated!
 
@@ -86,7 +86,7 @@ From there, continue to write your app using jcef as you are used to. You can ca
 
 You can also set your custom download mirrors by using the `getMirrors()` and `setMirrors(Collection<String>)` methods. This currently defaults to this repository on `github.com` and alternatively to the central maven repo on `repo.maven.apache.org`. Further information can be found in the javadoc.
 
-If you need some code examples to create your first app, have a look at the [tests](jcefgithub/src/test) on this repository or at the [sample app](https://github.com/jcefgithub/jcefsampleapp).
+If you need some code examples to create your first app, have a look at the [tests](jcefgithub/src/test) on this repository.
 
 #### Some additional useful code snippets
 
@@ -122,14 +122,6 @@ To use on MacOSX, add the following JVM flags:
 --add-opens java.desktop/sun.awt=ALL-UNNAMED
 --add-opens java.desktop/sun.lwawt=ALL-UNNAMED
 --add-opens java.desktop/sun.lwawt.macosx=ALL-UNNAMED
-```
-
-To use OSR (off-screen render) mode, add these flags for JOGL:
-
-```
---add-exports java.base/java.lang=ALL-UNNAMED
---add-exports java.desktop/sun.awt=ALL-UNNAMED
---add-exports java.desktop/sun.java2d=ALL-UNNAMED
 ```
 
 ## Reporting bugs
